Implemented about us and feedback activities!

--- a/app/src/main/res/layout/activity_forgotten_password.xml
+++ b/app/src/main/res/layout/activity_forgotten_password.xml
@@ -53,6 +53,7 @@
             app:lottie_rawRes="@raw/forgot_password" />
 
         <TextView
+            style="@style/Widget.Scannera.TextView"
             android:id="@+id/forgotten_password_instruction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -60,11 +61,9 @@
             android:layout_marginTop="24dp"
             android:layout_marginEnd="@dimen/general_btn_margin"
             android:layout_marginBottom="24dp"
-            android:fontFamily="@font/roboto_slab"
             android:gravity="center"
             android:maxWidth="@dimen/lottie_square_animation_size"
             android:text="@string/forgotten_password_instruction"
-            android:textColor="?attr/colorPrimaryDark"
             android:textSize="@dimen/small_text_size"
             app:layout_constraintBottom_toTopOf="@+id/email_input_guideline"
             app:layout_constraintEnd_toEndOf="parent"
@@ -100,7 +99,6 @@
             android:layout_height="@dimen/medium_btn_height"
             android:layout_marginStart="@dimen/general_btn_margin"
             android:layout_marginEnd="@dimen/general_btn_margin"
-            app:cornerRadius="@dimen/round_btn_corner_radius"
             android:text="@string/send_email"
             android:layout_marginTop="@dimen/button_margin_top_input"
             android:textAllCaps="false"
