--- a/app/src/main/res/layout/activity_password_email_sent.xml
+++ b/app/src/main/res/layout/activity_password_email_sent.xml
@@ -46,16 +46,15 @@
         app:lottie_rawRes="@raw/email_sent" />
 
     <TextView
+        style="@style/Widget.Scannera.TextView"
         android:id="@+id/email_sent_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/login_layout_margin"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="@dimen/login_layout_margin"
-        android:fontFamily="@font/roboto_slab"
         android:gravity="center"
         android:text="@string/password_reset_email_sent_description"
-        android:textColor="?attr/colorPrimaryDark"
         android:textSize="@dimen/small_text_size"
         android:maxWidth="@dimen/lottie_square_animation_size"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +69,6 @@
         android:layout_marginStart="@dimen/login_layout_margin"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="@dimen/login_layout_margin"
-        app:cornerRadius="@dimen/round_btn_corner_radius"
         android:text="@string/login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,12 +85,11 @@
         app:layout_constraintTop_toBottomOf="@id/login_btn">
 
         <TextView
+            style="@style/Widget.Scannera.TextView"
             android:id="@+id/didnt_receive_email_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/didnt_receive_email"
-            android:fontFamily="@font/roboto_slab"
-            android:textColor="?attr/colorPrimaryDark"
             android:textSize="@dimen/small_text_size" />
 
         <TextView
