Changed rating star color | Added edittext animation on empty | added feedback icon to the entry button | added references to java classes

--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -58,6 +58,9 @@
         android:layout_marginBottom="24dp"
         android:text="@string/provide_feedback"
         android:textAllCaps="false"
+        app:icon="@drawable/ic_feedback"
+        app:iconGravity="textStart"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
