--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -67,6 +67,7 @@
         android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:progressTint="@color/rating_star_color"
         app:layout_constraintTop_toBottomOf="@id/animation_guideline" />
 
     <EditText
