--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="chathams_blue">#195386</color>
     <color name="pinky_red">#DA688F</color>
     <color name="textInputOutlineColor">#45D5E8</color>
+    <color name="rating_star_color">#F9D31E</color>
 </resources>
