--- a/app/src/main/res/layout/activity_scan_history.xml
+++ b/app/src/main/res/layout/activity_scan_history.xml
@@ -37,6 +37,7 @@
         android:id="@+id/SH_content_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="18dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/title_barrier"
