--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,5 @@
     <dimen name="user_activity_list_btn_icon_padding">24dp</dimen>
     <dimen name="me_fragment_user_profile_img_size">100dp</dimen>
     <dimen name="home_fragment_user_img_size">40dp</dimen>
+    <dimen name="dialog_msg_max_width">350dp</dimen>
 </resources>
