--- a/app/src/main/res/layout/activity_product_feed.xml
+++ b/app/src/main/res/layout/activity_product_feed.xml
@@ -7,11 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".ProductFeedActivity">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/dynamic_input_prompt"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_height="200dp"
         app:layout_constraintStart_toStartOf="@id/back_btn_v_guideline"
         app:layout_constraintEnd_toEndOf="@id/end_v_guideline"
         app:layout_constraintTop_toBottomOf="@id/fst_h_guideline">
@@ -23,17 +22,20 @@
             android:text="@string/product_brand"
             android:textColor="?attr/colorPrimaryDark"
             android:textSize="20sp"
-            android:layout_gravity="center_horizontal"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout"
-            android:layout_marginTop="12dp"
             style="@style/Widget.Scannera.TextInputLayout.OutlineBox"
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="12dp"
+            android:layout_margin="12dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/input_title"
             app:endIconMode="clear_text">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -41,7 +43,28 @@
                 android:hint="@string/enter_info_hint"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:maxLength="35"/>
+                android:maxLength="50"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/category_dropdown_menu"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_margin="12dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/input_title">
+
+            <AutoCompleteTextView
+                android:id="@+id/cdm_autoCompTv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:inputType="none"
+                android:hint="@string/category_drop_down_menu_hint"
+                />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.button.MaterialButton
@@ -51,11 +74,12 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textAllCaps="false"
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="12dp"
+            android:layout_margin="12dp"
             android:text="@string/next"
-            android:layout_gravity="center_horizontal"/>
-    </LinearLayout>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/input_layout"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/top_back_btn"
