Improved the titles of each edit dialogs. Deleted unnecessary constraints

--- a/app/src/main/res/layout/dialog_product_feed_tv_edit.xml
+++ b/app/src/main/res/layout/dialog_product_feed_tv_edit.xml
@@ -21,18 +21,19 @@
         android:layout_marginTop="12dp"
         android:id="@+id/edit_text_input_layout"
         style="@style/Widget.Scannera.TextInputLayout.OutlineBox"
+        app:errorEnabled="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:endIconMode="clear_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/fst_h_guideline"
+        android:layout_gravity="center_horizontal"
         app:startIconDrawable="@drawable/ic_edit">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/edit_et"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:hint="@string/enter_info_hint"
+            android:maxLength="50"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
