Embedded the common button layout height into the button style that is applied to almost all the buttons in the app.

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,6 +33,7 @@
         <item name="android:textColor">@color/white</item>
         <item name="backgroundTint">?attr/colorPrimary</item>
         <item name="cornerRadius">@dimen/round_btn_corner_radius</item>
+        <item name="android:layout_height">@dimen/medium_btn_height</item>
         <item name="android:stateListAnimator" tools:ignore="NewApi">
             @animator/button_state_list_anim
         </item>
