--- a/app/src/main/res/layout/activity_product_feed.xml
+++ b/app/src/main/res/layout/activity_product_feed.xml
@@ -118,7 +118,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/product_brand_views"
             android:layout_marginTop="24dp"
-            app:layout_constraintStart_toStartOf="@id/back_btn_v_guideline"
+            app:layout_constraintStart_toStartOf="@id/start_v_guideline"
             app:layout_constraintEnd_toStartOf="@id/end_v_guideline2"
             app:layout_constraintTop_toBottomOf="@id/activity_title">
             <TextView
@@ -139,8 +139,11 @@
                 android:layout_width="@dimen/product_feed_input_max_width"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/product_feed_input_margin_start"
+                android:layout_marginEnd="5dp"
                 android:textColor="?attr/colorPrimaryDark"
+                app:layout_constraintEnd_toStartOf="@id/product_brand_edit_tvbtn"
                 app:layout_constraintStart_toEndOf="@id/product_brand_label"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
@@ -163,7 +166,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/product_name_views"
             android:layout_marginTop="@dimen/product_feed_h_spacing"
-            app:layout_constraintStart_toStartOf="@id/back_btn_v_guideline"
+            app:layout_constraintStart_toStartOf="@id/start_v_guideline"
             app:layout_constraintEnd_toStartOf="@id/end_v_guideline2"
             app:layout_constraintTop_toBottomOf="@id/brand_barrier">
             <TextView
@@ -183,10 +186,13 @@
                 android:layout_width="@dimen/product_feed_input_max_width"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/product_feed_input_margin_start"
+                android:layout_marginEnd="5dp"
                 android:textColor="?attr/colorPrimaryDark"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/product_name_label"/>
+                app:layout_constraintEnd_toStartOf="@id/product_name_edit_tvbtn"
+                app:layout_constraintStart_toEndOf="@id/product_name_label"
+                app:layout_constraintHorizontal_bias="1.0"/>
 
             <TextView
                 android:id="@+id/product_name_edit_tvbtn"
@@ -207,7 +213,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/product_price_views"
             android:layout_marginTop="@dimen/product_feed_h_spacing"
-            app:layout_constraintStart_toStartOf="@id/back_btn_v_guideline"
+            app:layout_constraintStart_toStartOf="@id/start_v_guideline"
             app:layout_constraintEnd_toStartOf="@id/end_v_guideline2"
             app:layout_constraintTop_toBottomOf="@id/name_barrier">
 
@@ -228,10 +234,13 @@
                 android:layout_width="@dimen/product_feed_input_max_width"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/product_feed_input_margin_start"
+                android:layout_marginEnd="5dp"
                 android:textColor="?attr/colorPrimaryDark"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/product_price_label"/>
+                app:layout_constraintEnd_toStartOf="@id/product_price_edit_tvbtn"
+                app:layout_constraintStart_toEndOf="@id/product_price_label"
+                app:layout_constraintHorizontal_bias="1.0"/>
 
             <TextView
                 android:id="@+id/product_price_edit_tvbtn"
@@ -252,7 +261,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/product_category_views"
             android:layout_marginTop="@dimen/product_feed_h_spacing"
-            app:layout_constraintStart_toStartOf="@id/back_btn_v_guideline"
+            app:layout_constraintStart_toStartOf="@id/start_v_guideline"
             app:layout_constraintEnd_toStartOf="@id/end_v_guideline2"
             app:layout_constraintTop_toBottomOf="@id/price_barrier">
             <TextView
@@ -272,10 +281,13 @@
                 android:layout_width="@dimen/product_feed_input_max_width"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/product_feed_input_margin_start"
+                android:layout_marginEnd="5dp"
                 android:textColor="?attr/colorPrimaryDark"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/product_category_label"/>
+                app:layout_constraintEnd_toStartOf="@id/product_category_edit_tvbtn"
+                app:layout_constraintStart_toEndOf="@id/product_category_label"
+                app:layout_constraintHorizontal_bias="1.0"/>
 
             <TextView
                 android:id="@+id/product_category_edit_tvbtn"
@@ -298,7 +310,7 @@
             android:id="@+id/product_nutritional_info_title_views"
             android:layout_marginTop="@dimen/product_feed_h_spacing"
             app:layout_constraintEnd_toStartOf="@id/end_v_guideline2"
-            app:layout_constraintStart_toStartOf="@id/back_btn_v_guideline"
+            app:layout_constraintStart_toStartOf="@id/start_v_guideline"
             app:layout_constraintTop_toBottomOf="@id/category_barrier">
             <TextView
                 android:id="@+id/product_nutritional_table_label"
@@ -340,14 +352,14 @@
             style="@style/Widget.Scannera.Button"
             android:layout_width="match_parent"
             android:layout_marginStart="@dimen/general_btn_margin"
-            android:layout_marginEnd="@dimen/general_btn_margin"
             android:layout_marginTop="12dp"
+            android:layout_marginEnd="@dimen/general_btn_margin"
             android:gravity="center"
             android:text="@string/confirm"
             android:visibility="invisible"
-            app:layout_constraintTop_toBottomOf="@id/nutritional_info_pic"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/nutritional_info_pic" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/back_btn_h_guideline"
@@ -362,6 +374,13 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.1" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/start_v_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.05" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/end_v_guideline"
