Added the categories obtained from woolworths, also changed the category field to textAutocomplete so the users can manually enter a customised category.

--- a/app/src/main/res/layout/activity_product_feed.xml
+++ b/app/src/main/res/layout/activity_product_feed.xml
@@ -67,7 +67,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:inputType="none"
+                    android:inputType="textAutoComplete"
                     android:hint="@string/category_drop_down_menu_hint"
                     />
             </com.google.android.material.textfield.TextInputLayout>
