Added starred product activity that includes the skeleton code of it. Adjusted the cardview margin. slight updates on some other xml layouts

--- a/app/src/main/res/layout/activities_with_product_list.xml
+++ b/app/src/main/res/layout/activities_with_product_list.xml
@@ -26,7 +26,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto_slab"
-        android:text="@string/scan_history"
         android:textColor="?attr/colorPrimary"
         android:textSize="@dimen/small_title_text_size"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,7 +33,7 @@
         app:layout_constraintTop_toBottomOf="@id/back_btn_h_guideline" />
 
     <FrameLayout
-        android:id="@+id/SH_content_container"
+        android:id="@+id/content_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="18dp"
