--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="32dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/starred_btn"
+        app:layout_constraintBottom_toTopOf="@+id/starred_products_btn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
@@ -61,13 +61,13 @@
     </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/starred_btn"
+        android:id="@+id/starred_products_btn"
         style="?attr/materialButtonOutlinedStyle"
         android:layout_width="match_parent"
         android:layout_height="@dimen/user_activity_list_btn_height"
         android:elegantTextHeight="true"
         android:gravity="start|center_vertical"
-        android:text="@string/starred"
+        android:text="@string/starred_products"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="@dimen/user_activity_list_btn_text_size"
@@ -92,7 +92,7 @@
         app:iconPadding="@dimen/user_activity_list_btn_icon_padding"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/starred_btn" />
+        app:layout_constraintTop_toBottomOf="@id/starred_products_btn" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/about_us_btn"
