Added the star button and the incremented the image height within the collapsing toolbar

--- a/app/src/main/res/layout/product_cardview.xml
+++ b/app/src/main/res/layout/product_cardview.xml
@@ -27,6 +27,17 @@
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintEnd_toEndOf="parent"/>
 
+        <ImageButton
+            android:id="@+id/star_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/btn_star"
+            android:layout_alignParentBottom="true"
+            card_view:layout_constraintTop_toTopOf="parent"
+            card_view:layout_constraintStart_toStartOf="parent"
+            card_view:layout_constraintEnd_toEndOf="parent"
+            android:background="#00ffffff" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
